# scalar-node-desktop

./: LICENSE  README.md  scalar-crypto.rar
.github/workflows/: release.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  ErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scalar-crypto/: Cargo.toml
src-tauri/scalar-crypto/src/: blake3.rs  channel.rs  crypto_agility.rs  domain.rs  encryption.rs  hybrid_hash.rs  hybrid_kem.rs  imt.rs  lib.rs  ml_kem.rs  poseidon2.rs  poseidon2_t8.rs  privacy.rs  sphincs.rs  version.rs
src-tauri/src/: main.rs
src-tauri/src/daemon/: keygen.rs  mod.rs  node.rs  ssh.rs
src-tauri/src/gui/: tray.rs
