[package]
name = "scalar-node-desktop"
version = "0.4.20"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sysinfo = "0.30"
tauri = { version = "2", features = ["tray-icon", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scalar-crypto = { path = "scalar-crypto" }
bip39 = "2.2"
argon2 = "0.5"
chacha20poly1305 = "0.10"
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
blake3 = "1.5"
hex = "0.4"
base64 = "0.22"
rfd = "0.17.2"
