[package]
name = "scalar-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-goldilocks = "0.5"
p3-field = "0.5"
p3-symmetric = "0.5"
thiserror = "1"
pqcrypto-traits = "0.3.5"
pqcrypto-sphincsplus = "0.7"
blake3 = "1.5"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = "0.10.1"
zeroize = { version = "1.8.2", features = ["derive"] }
pqcrypto-kyber = "0.8.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
